[project]
name = "lerobot_policy_nwo"
version = "0.1.0"
description = "LeRobot policy adapter for NWO Robotics Cloud API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.10"
authors = [
    {name = "NWO Capital", email = "ciprian.pater@publicae.org"}
]
keywords = ["lerobot", "robotics", "nwo", "vla", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lerobot>=0.1.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://nwo.capital"
Documentation = "https://nwo.capital/webapp/nwo-robotics.html"
Repository = "https://github.com/nwocapital/lerobot_policy_nwo"
PyPI = "https://pypi.org/project/lerobot_policy_nwo/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
